Adding ElasticSearch to the project; Implementing auditing of metadata throught ElasticService
